<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/item_about_me"
            android:icon="@drawable/ic_about_me_24"
            android:title="@string/act_main_nv_menu_about_me_item" />
        <item
            android:id="@+id/item_my_products"
            android:icon="@drawable/ic_my_products_24"
            android:title="@string/act_main_nv_menu_my_products_item" />
        <item
            android:id="@+id/item_shop"
            android:icon="@drawable/ic_shop_24"
            android:title="@string/act_main_nv_menu_shop_item" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/act_main_nv_menu_settings_item" />
    </group>
</menu>